--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 management.endpoints.web.exposure.include=*
-spring.jpa.defer-datasource-initialization = true
-spring.sql.init.mode: always
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode:always
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
